2006-11-09  Jan Schmidt  <thaytan@mad.scientist.com>

	* Makefile.am:
	* configure.ac:
	* libs/gst/base/gstadapter.c: (gst_adapter_clear),
	(gst_adapter_push), (gst_adapter_peek_into), (gst_adapter_peek),
	(gst_adapter_flush), (gst_adapter_take), (gst_adapter_take_buffer):
	* libs/gst/base/gstadapter.h:
	* tests/check/libs/adapter.c: (create_and_fill_adapter),
	(GST_START_TEST), (gst_adapter_suite):
	* tests/examples/Makefile.am:
	Do some optimisation work in GstAdapter to avoid copies in more cases.
	It could still do slightly better by merging buffers when
	gst_buffer_is_span_fast is true, but is already faster. 

	Also, avoid traversing a single-linked list to append each incoming 
	buffer inside the adapter.

	Add simple test app that times the adapter behaviour in different
	situations, and extend the unit test to check that bytes enter and
	exit the adapter in their original order.

2006-11-08  Tim-Philipp Müller  <tim at centricular dot net>

	* docs/random/draft-missing-plugins.txt:
	  Update: use element message instead of adding a new message
	  type to the core; don't provide GStreamer API to initiate the
	  plugin download, just provide API to compose the strings needed
	  and let an external libgimmestuff handle the rest.

2006-11-08  Jan Schmidt  <thaytan@mad.scientist.com>

	* tools/gst-inspect.c: (print_element_properties_info):
	Print a string instead of 'unknown type' for GValueArray properties

2006-11-08  Christian F.K. Schaller  <christian@fluendo.com>

	* docs/random/draft-missing-plugins.txt:
	More small fixes.

2006-11-07  Tim-Philipp Müller  <tim at centricular dot net>

	* tests/examples/typefind/typefind.c: (type_found), (main):
	  Make typefind element example work again (#371894); add a
	  license header.

2006-11-07  Tim-Philipp Müller  <tim at centricular dot net>

	* docs/random/draft-missing-plugins.txt:
	  Commit initial draft about how to deal with missing plugins,
	  needs work (API too).
