@@ -1,0 +1,4 @@
+noinst_PROGRAMS = adapter_test
+
+adapter_test_LDADD = $(GST_OBJ_LIBS) $(top_builddir)/libs/gst/base/libgstbase-@GST_MAJORMINOR@.la
+adapter_test_CFLAGS = $(GST_OBJ_CFLAGS)
